# pangeo-iaocea

./: .gitignore  .pre-commit-config.yaml  data-fusion.ipynb  foscat-xarray-interface-demo.ipynb  pyproject.toml  query-stac.ipynb  regridding.ipynb  regridding.py  requirements.txt  xarray-interface-demo.ipynb
data/: avhrr-sst-metop_b.parquet  insitu_global_phybgcwav_discrete_mynrt_013_030.jsonl
data/stac/: avhrr-sst-metop_b.parquet  insitu_global_phybgcwav_discrete_mynrt_013_030.jsonl
pangeo_iaocea/: __init__.py  io.py  regridding.py  subsetting.py
