[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "pangeo-iaocea"
dynamic = ["version"]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
  "xarray",
  "xdggs",
  "lonboard",
  "pystac-client",
  "shapely",
  "pyarrow",
  "numpy",
  "stac-geoparquet",
  "matplotlib",
  "stac-insitu",
]
